@@ -1,5 +1,10 @@
 2005-10-30  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: change dBASE comment, add aliases.
+	Thanks to J.H.M Dassen. Fixes #3147.
+
+2005-10-30  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: add Lotus 1-2-3 aliases. Thanks to J.H.M
 	Dassen. Fixes #3144.
 
